# phi_math

./: .gitignore  CODEBASE_SUMMARY.md  README.md  outputs.txt  pyproject.toml  queries.txt  remove_pycaches.sh  run_config.yaml  run_exp.sh  run_vllm_queries_yaml.py  vllm_utils.py
configs/eval/: dummy_math.yaml  gsm8k_vllm_phi15.yaml
logs/: test_gpu_cpu.err  test_gpu_cpu.out
scripts/: run_eval.py
src/phi_synth_math/: __init__.py
src/phi_synth_math/core/: __init__.py  config.py  jsonl.py  registry.py  run_dir.py
src/phi_synth_math/models/: __init__.py  base.py  dummy.py  vllm_model.py
src/phi_synth_math/tasks/: __init__.py
src/phi_synth_math/tasks/benchmarks/: __init__.py
src/phi_synth_math/tasks/benchmarks/dummy_addition/: __init__.py  dataset.py  scoring.py
src/phi_synth_math/tasks/benchmarks/gsm8k/: __init__.py  dataset.py  scoring.py
src/phi_synth_math/tasks/core/: __init__.py  metadata.py  runner.py  scoring.py  scoring_utils.py
src/phi_synth_math/tasks/datasets/: __init__.py  base.py  dummy_math_addition.py  gsm8k.py
src/phi_synth_math/tasks/dummy_addition/: dataset.py  scoring.py
src/phi_synth_math/tasks/eval/: __init__.py  runner.py  scoring.py
src/phi_synth_math/tasks/gsm8k/: __init__.py  dataset.py  scoring.py
src/phi_synth_math/tasks/shared/: runner.py  scoring.py
